--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -1108,3 +1108,15 @@
   year={2016},
   publisher={Nature Publishing Group}
 }
+
+@article{dereeper2008phylogeny,
+  title={Phylogeny. fr: robust phylogenetic analysis for the non-specialist},
+  author={Dereeper, Alexis and Guignon, Valentin and Blanc, Guillaume and Audic, St{\'e}phane and Buffet, S and Chevenet, Fran{\c{c}}ois and Dufayard, J-F and Guindon, St{\'e}phane and Lefort, Vincent and Lescot, Magali and others},
+  journal={Nucleic acids research},
+  volume={36},
+  number={suppl\_2},
+  pages={W465--W469},
+  year={2008},
+  publisher={Oxford University Press}
+}
+
